--- a/etc/modules/mongodb-notification-broker.cfg
+++ b/etc/modules/mongodb-notification-broker.cfg
@@ -7,6 +7,13 @@ define module {
     module_name     mongodb-notification-broker
     module_type     mongodb_notification_broker
     
+    # Number of seconds for AutoReconnect before a warning log is done. Default
+    # is 1 second
+    retry_per_log   3
+    
+    # Size of queue used to store broks. Default is 10,000.
+    queue_size      10000
+    
     # Specify if we connect to replica set(HA) MongoDB instances or 
     # just a stand alone MongoDB instance. Default to False, i.e. no HA.
     high_availability  true
@@ -35,9 +42,6 @@ define module {
     # journal=true      Journal 
     # replicaSet=shinken     replica set name
     url_options     w=1&wtimeoutMS=3000&journal=true&replicaSet=shinken&connectTimeoutMS=3000
-    
-    # times for AutoReconnect before a warning log is done
-    retry_per_log   50  
         
     # Authorize to the specific MongoDB 'database'.
     # Both default to 'shinken_broker_notification'.
