--- a/etc/modules/mongodb-notification-broker.cfg
+++ b/etc/modules/mongodb-notification-broker.cfg
@@ -8,11 +8,11 @@ define module {
     module_type     mongodb_notification_broker
     
     # Number of seconds for AutoReconnect before a warning log is done. Default
-    # is 1 second
-    retry_per_log   3
+    # is 5 seconds.
+    retry_per_log   5
     
     # Size of queue used to store broks. Default is 10,000.
-    queue_size      10000
+    queue_size      20000
     
     # Specify if we connect to replica set(HA) MongoDB instances or 
     # just a stand alone MongoDB instance. Default to False, i.e. no HA.
@@ -39,9 +39,10 @@ define module {
     
     # MongoDB URL options
     # w=1&wtimeoutMS=3000   Write Concern
+    # readPreference=secondary  read Preference
     # journal=true      Journal 
     # replicaSet=shinken     replica set name
-    url_options     w=1&wtimeoutMS=3000&journal=true&replicaSet=shinken&connectTimeoutMS=3000
+    url_options     w=1&wtimeoutMS=3000&journal=true&readPreference=secondary&replicaSet=shinken&connectTimeoutMS=3000
         
     # Authorize to the specific MongoDB 'database'.
     # Both default to 'shinken_broker_notification'.
